--- a/package.json
+++ b/package.json
@@ -8,5 +8,20 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "bootstrap": "^5.0.2",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify": "^3.1.0",
+    "gulp-purgecss": "^4.0.3",
+    "gulp-sass": "^5.0.0",
+    "gulp-webserver": "^0.9.1",
+    "node-sass": "^6.0.1",
+    "purgecss": "^4.0.3",
+    "sass": "^1.37.2"
+  },
+  "dependencies": {
+    "vanilla-lazyload": "^17.4.0"
+  }
 }
