--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,8 @@ name: Release
 # Run on every commit tag which begins with "v" (e.g., "v0.1.4")
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - "master"
 
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
