--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ name: Release
 on:
   push:
     branches:
-      - "master"
+      - "main"
 
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
