--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       # ...
+      - name: Checkout source code
+        uses: actions/checkout@v1
       - name: "Build & test"
         run: |
           echo "done!"
