--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,11 +1,11 @@
 # Name of the workflow
-name: Release
+name: Pre-Release
 
 # Run on every commit tag which begins with "v" (e.g., "v0.1.4")
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - "main"
 
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
@@ -19,13 +19,13 @@ jobs:
         uses: actions/checkout@v1
       - name: "Build & test"
         run: |
-          echo "Build zip!"
+          echo "done!"
           zip -r deployment.zip assets gracias.html index.html send_mail.php
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: false
+          prerelease: true
           title: "Development Build"
           files: |
             deployment.zip
