--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,22 +10,29 @@ on:
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
   pre-release:
-    name: "Pre Release"
+    name: "Release"
     runs-on: "ubuntu-latest"
 
     steps:
       # ...
       - name: Checkout source code
         uses: actions/checkout@v1
-      - name: "Build & test"
+      - name: "Install dependences"
         run: |
-          echo "Build zip!"
-          zip -r deployment.zip assets gracias.html index.html send_mail.php
+          echo "Install npm dependences"
+          npm install
+      - name: "Build js"
+        run: |
+          echo "Building gulp assets!"
+          gulp build
+      - name: "Create zip file"
+        run: |
+            zip -r deployment.zip assets gracias.html index.html send_mail.php
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: false
+          prerelease: true
           title: "Development Build"
           files: |
             deployment.zip
