UPDATE: Release ymnl configuration

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,7 +1,7 @@
 # Name of the workflow
 name: Pre-Release
 
-# Run on every commit tag which begins with "v" (e.g., "v0.1.4")
+# Run on every push to main
 on:
   push:
     branches:
