SET: Release branch as trigger to create pre-release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,8 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          #automatic_release_tag: "latest"
+          #automatic_release_tag: "latest" Uncomment to put your custom tag
           prerelease: false
-          #title: "Development Build" Uncomment to put your custom tag
+          #title: "Development Build" Uncomment to put your custom title
           files: |
             deployment.zip
