--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -5,7 +5,7 @@ name: Pre-Release
 on:
   push:
     branches:
-      - "main"
+      - "release"
 
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
