Update: Update release configuration

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -27,7 +27,9 @@ jobs:
           gulp build
       - name: "Create zip file"
         run: |
-            zip -r deployment.zip assets gracias.html index.html send_mail.php
+            NAME="deployment1"
+            echo "! $NAME"
+            zip -r "$NAME.zip" assets gracias.html index.html send_mail.php
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
