--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,4 +1,4 @@
-# Name of the workflow
+ Name of the workflow
 name: Pre-Release
 
 # Run on every push to main
@@ -32,15 +32,12 @@ jobs:
           gulp build
       - name: "Create zip file"
         run: |
-          echo "! ${{ env.FILE_NAME }}"
-        #     FILENAME="${REPOSITORY}.zip"
-       #      echo "$FILENAME";
-      #       zip -r "$FILENAME" assets gracias.html index.html send_email.php
-     # - uses: "marvinpinto/action-automatic-releases@latest"
-       #  with:
-         #  repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          # automatic_release_tag: "latest"
-          # prerelease: true
-          # title: "Development Build"
-          # files: |
-          #   *.zip
+          zip -r "${{ env.FILE_NAME }}" assets gracias.html index.html send_email.php
+      - uses: "marvinpinto/action-automatic-releases@latest"
+         with:
+           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+           automatic_release_tag: "latest"
+           prerelease: true
+           title: "Development Build"
+           files: |
+             ${{ env.FILE_NAME }}.zip
