--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -32,13 +32,4 @@ jobs:
           gulp build
       - name: "Create zip file"
         run: |
-          zip -r "${{ env.FILE_NAME }}" assets gracias.html index.html send_email.php
-      - name: "Deploy" 
-        uses: "marvinpinto/action-automatic-releases@latest"
-          with:
-            repo_token: "${{ secrets.GITHUB_TOKEN }}"
-            automatic_release_tag: "latest"
-            prerelease: true
-            title: "Development Build"
-            files: |
-              ${{ env.FILE_NAME }}.zip
+          echo "Creating Zip file!"
