--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -41,4 +41,4 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            ${{ env.FILE_NAME }}.zip
+            ${{ env.FILE_NAME }}
