--- a/.github/workflows/new-pre-release.yml
+++ b/.github/workflows/new-pre-release.yml
@@ -12,7 +12,11 @@ jobs:
   image-name:
     runs-on: ubuntu-latest
     steps:
-      - name: Parse short sha
+      - name: Set filename
         id: short-sha
         run: |
-          echo "Hello world"
+          echo "GET FILENAME"
+          FILE_NAME="${REPOSITORY_NAME}.zip"
+          echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
+          echo $FILE_NAME
+          echo $GITHUB_ENV
