--- a/.github/workflows/new-pre-release.yml
+++ b/.github/workflows/new-pre-release.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           echo "GET FILENAME"
           FILE_NAME="${REPOSITORY_NAME}.zip"
-          echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
+          echo $FILE_NAME >> $GITHUB_OUTPUT
+          echo "$FILE_NAME"
           echo $FILE_NAME
-          echo $GITHUB_ENV
+          echo $GITHUB_OUTPUT
