TEST: new method

--- a/.github/workflows/new-pre-release.yml
+++ b/.github/workflows/new-pre-release.yml
@@ -17,7 +17,6 @@ jobs:
         run: |
           echo "GET FILENAME"
           FILE_NAME="repositorii_namonasd.zip"
-          echo $FILE_NAME >> $GITHUB_OUTPUT
+          echo "$FILE_NAME" >> $GITHUB_OUTPUT
           echo "$FILE_NAME"
-          echo $FILE_NAME
           echo $GITHUB_OUTPUT
