--- a/.github/workflows/new-pre-release.yml
+++ b/.github/workflows/new-pre-release.yml
@@ -9,14 +9,21 @@ on:
 
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
-  image-name:
+  get-name:
     runs-on: ubuntu-latest
+    outputs:
+      FILE_NAME: ${{steps.get-props.outputs.FILENAME}}
     steps:
       - name: Set filename
-        id: short-sha
+        id: get-props
         run: |
           echo "GET FILENAME"
-          FILE_NAME="repositorii_namonasd.zip"
-          echo "$FILE_NAME" >> $GITHUB_OUTPUT
-          echo "$FILE_NAME"
-          echo $GITHUB_OUTPUT
+          echo "FILE_NAME=hello-world" >> $GITHUB_ENV
+
+  release:
+    runs-on: ubuntu-latest
+    needs: [get-name]
+    steps:
+      - run: |
+          echo ${{needs.get-name.outputs.FILE_NAME}}
+
