--- a/.github/workflows/new-pre-release.yml
+++ b/.github/workflows/new-pre-release.yml
@@ -18,12 +18,13 @@ jobs:
         id: get-props
         run: |
           echo "GET FILENAME"
-          echo "FILE_NAME=hello-world" >> $GITHUB_ENV
+          echo "FILE_NAME=hello-world" >> $GITHUB_OUTPUT
 
   release:
     runs-on: ubuntu-latest
     needs: [get-name]
     steps:
       - run: |
+          echo "<==== GET FILE NAME ====>"
           echo ${{needs.get-name.outputs.FILE_NAME}}
 
