--- a/.github/workflows/new-pre-release.yml
+++ b/.github/workflows/new-pre-release.yml
@@ -9,22 +9,20 @@ on:
 
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
-  get-name:
+  jobs:
+    job1:
+      runs-on: ubuntu-latest
+      # Map a step output to a job output
+      outputs:
+        output1: ${{ steps.step1.outputs.test }}
+        output2: ${{ steps.step2.outputs.test }}
+      steps:
+        - id: step1
+          run: echo "test=hello" >> $GITHUB_OUTPUT
+        - id: step2
+          run: echo "test=world" >> $GITHUB_OUTPUT
+  job2:
     runs-on: ubuntu-latest
-    outputs:
-      FILE_NAME: ${{steps.get-props.outputs.FILENAME}}
+    needs: job1
     steps:
-      - name: Set filename
-        id: get-props
-        run: |
-          echo "GET FILENAME"
-          echo "FILE_NAME=hello-world" >> $GITHUB_OUTPUT
-
-  release:
-    runs-on: ubuntu-latest
-    needs: [get-name]
-    steps:
-      - run: |
-          echo "<==== GET FILE NAME ====>"
-          echo ${{needs.get-name.outputs.FILE_NAME}}
-
+      - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
