--- a/.github/workflows/new-pre-release.yml
+++ b/.github/workflows/new-pre-release.yml
@@ -9,19 +9,22 @@ on:
 
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
-  job1:
+  get-name:
     runs-on: ubuntu-latest
-    # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
+      FILE_NAME: ${{ steps.getprops.outputs.FILENAME}}
     steps:
-      - id: step1
-        run: echo "test=hello" >> $GITHUB_OUTPUT
-      - id: step2
-        run: echo "test=world" >> $GITHUB_OUTPUT
-  job2:
+      - name: Set filename
+        id: getprops
+        run: |
+          echo "GET FILENAME"
+          echo "FILENAME=helloworld" >> $GITHUB_OUTPUT
+
+  release:
     runs-on: ubuntu-latest
-    needs: job1
+    needs: get-name
     steps:
-      - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
+      - run: |
+          echo "<==== GET FILE NAME"
+          echo ${{needs.get-name.outputs.FILENAME}}
+
