--- a/.github/workflows/new-pre-release.yml
+++ b/.github/workflows/new-pre-release.yml
@@ -12,7 +12,7 @@ jobs:
   get-name:
     runs-on: ubuntu-latest
     outputs:
-      FILE_NAME: ${{ steps.getprops.outputs.FILENAME}}
+      FILENAME: ${{ steps.getprops.outputs.FILENAME}}
     steps:
       - name: Set filename
         id: getprops
